package com.example.LigaEsports.domain;

public enum Game {
    EFOOTBALL,
    MOBA,
    FPS
}
