    @startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

package "Domain Model" {

    abstract class Utilizador{
    id : UUID
    name : String
    email : String
    username : String
    password : String
    + getRole (): Role
    }

    abstract class Player extends Utilizador{
    num_games : int
    num_wins : int
    num_losses : int
    }

    class PlayerFPS extends Player{
    precisao : double
    headshots : int
    }
    class PlayerMOBA extends Player{
    personagem : String
    kills : int
    deaths : int
    assists : int
    }
    class PlayerEFootball extends Player{
    gols : int
    assistencias : int
    defesas : int
    }

    enum POSITION{
    GOALKEEPER
    DEFENDER
    MIDFIELDER
    FORWARD
    }

    class Team{
    id : UUID
    name : String
    treinadorId: UUID
    players : List<Player>
    vitorias : int
    derrotas : int
    }

    class Treinador extends Utilizador{
    }

    class Administrador extends Utilizador{
    }

    class Torneio{
    id : UUID
    name : String
    teams : List<Team>
    game : Game
    partidas : List<Partida>
    classificacao : List<Team>
    }

    enum Game{
    FPS
    MOBA
    EFOOTBALL
    }

    class Partida{
    id : UUID
    team1 : Team
    playersTeam1 : List<Player>
    team2 : Team
    playersTeam2 : List<Player>
    resultado : String
    data : Date
}

Team "1" --> "*" Player : has
PlayerEFootball "1" --> "1" POSITION : has a

Treinador "1" --> "*" Team : manages
Administrador "1" --> "*" Torneio : oversees

Torneio "1" -- "*" Team : includes
Torneio "1" -- "*" Game : features
Torneio "1" -- "*" Partida : consists of

Partida "1" -- "2" Team : involves

}

@enduml